--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,30 @@
 /*  your css code here. If applicable */
+div {
+	text-align: center;
+  background-color: lightgrey;
+  width: 200px;
+  border: 5px solid black;
+  border-radius: 25px;
+  padding: 25px;
+}
+.green {
+  height: 50px;
+  width: 50px;
+	border-radius: 500%;
+  background-color: green;
+  display: inline-block;
+}
+.yellow {
+  height: 50px;
+  width: 50px;
+	border-radius: 500%;
+  background-color: yellow;
+  display: inline-block;
+}
+.red {
+  height: 50px;
+  width: 50px;
+	border-radius: 500%;
+  background-color: red;
+  display: inline-block;
+}
